--- a/7 exercices.html
+++ b/7 exercices.html
@@ -7,11 +7,23 @@
         <title>Exercice sur les sélections</title>
 
         <script type="text/javascript">
+            // test branche esteban
             function auDemarrage() {
             // j'écris la plupart de mon code ici
+            let auteurs = document.getElementsByClassName("auteur");
+            let i = 1
+            for (let auteur in auteurs) {
+                i += 1
+                console.log(document.getElementsByClassName("auteur")[i]);
+            }
+
+    
             }
             // Je m'abonne à l'event 'load' 
             window.addEventListener('load', auDemarrage);
+
+
+
         </script>
 
         <style>
@@ -54,7 +66,6 @@
             article h1 {
                 background-color: gainsboro;
                 margin: 0px;
-        
             }
 
             footer {
