--- a/7 exercices.html
+++ b/7 exercices.html
@@ -8,6 +8,7 @@
 
         <script type="text/javascript">
             function auDemarrage() {
+            //test sur main
             // j'écris la plupart de mon code ici
             }
             // Je m'abonne à l'event 'load' 
