ajout prenom devant les exos

--- a/exo_a_rendre.html
+++ b/exo_a_rendre.html
@@ -16,7 +16,7 @@
                 //ol.children
                 // ex 3: Afficher les titres des articles dans la console
                 //document.querySelectorAll("header")
-                //ex 4: Inverser l'ordre des lauréats dans la page REUSSI
+                //ex 4: Inverser l'ordre des lauréats dans la page REUSSI LIEN
                 // 
                 let boutonInversionLaureats = document.querySelector("#boutonInversionLaureats")
                 //Je souhaite sélectionner le bouton nommé boutonInversionLaureats. Je stocke le résultat dans une variable.
@@ -40,7 +40,7 @@
                 // Je m'abonne à l'event 'click'
                 boutonInversionLaureats.addEventListener('click', inverserOrdre)
                 //ex 5: Ajouter un nouvel article à la suite des autres
-                //ex 6: Supprimer le dernier article de la page
+                //ex 6: Supprimer le dernier article de la page REUSSI Lien
                 // Je souhaite sélectionner le bouton nommé boutonSuppArticle. Je stocke le résultat dans une variable.
                 let boutonSuppArticle = document.querySelector("#boutonSuppArticle")
                 //Je définis une fonction. 
